--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,8 @@
-rootProject.name = 'registry'
+pluginManagement {
+	repositories {
+		maven { url 'https://repo.spring.io/milestone' }
+		maven { url 'https://repo.spring.io/snapshot' }
+		gradlePluginPortal()
+	}
+}
+rootProject.name = 'microservice4'
