--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
-spring:
-  freemarker:
-    template-loader-path: classpath:/templates/
-    prefer-file-system-access: false
 server:
-  port: 8761
+  port: 8686
+zuul:
+  routes:
+    foos:
+      path: /foos/**
+      url: http://localhost:8080/
