--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,1 @@
-pluginManagement {
-	repositories {
-		maven { url 'https://repo.spring.io/milestone' }
-		maven { url 'https://repo.spring.io/snapshot' }
-		gradlePluginPortal()
-	}
-}
-rootProject.name = 'microservice4'
+rootProject.name = 'webservice1'
