--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,11 @@
+spring:
+  application:
+    name: webservice
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+  healthcheck:
+    enabled: true
 server:
-  port: 8686
-zuul:
-  routes:
-    foos:
-      path: /foos/**
-      url: http://localhost:8080/
+  port: 8484
